--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
             </div>
     </nav>
 
-    <main id="schedule-container" class="schedule-container">
-        </main>
+    <div id="swipe-container">
+    <main id="schedule-container" class="schedule-container"></main>
+</div>
     
     <div id="edit-modal" class="edit-modal">
         <div class="modal-content">
@@ -362,9 +363,23 @@
         renderDay(currentDayIndex);
     }
 
-    // 綁定觸控事件（整個 body 都可以滑）
-    document.body.addEventListener('touchstart', handleTouchStart, { passive: true });
-    document.body.addEventListener('touchend', handleTouchEnd, { passive: true });
+    // 改綁到專門的滑動容器，完美解決「整個畫面被拖」的問題
+const swipeContainer = document.getElementById('swipe-container');
+
+swipeContainer.addEventListener('touchstart', handleTouchStart, { passive: true });
+swipeContainer.addEventListener('touchend', handleTouchEnd, { passive: true });
+
+// 可選：也支援滑鼠拖曳測試（電腦用）
+swipeContainer.addEventListener('mousedown', (e) => mouseStartX = e.screenX);
+swipeContainer.addEventListener('mouseup', (e) => {
+    const diff = mouseStartX - e.screenX;
+    if (Math.abs(diff) > 80) {
+        if (diff > 0 && currentDayIndex < appData.days.length - 1) currentDayIndex++;
+        else if (diff < 0 && currentDayIndex > 0) currentDayIndex--;
+        updateNavState();
+        renderDay(currentDayIndex);
+    }
+});
 
     // 可選：也支援滑鼠拖曳（在電腦上測試用）
     let mouseStartX = 0;
