--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>曼谷五日自由行</title>
     <link rel="stylesheet" href="style.css">
     <script src="originalTripData.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
 </head>
 <body>
 
