--- a/index.html
+++ b/index.html
@@ -934,13 +934,13 @@
     const SUPABASE_ANON_KEY = 'sb_publishable_9aL5kTXzgwyIlG9sXX_O5Q_q8shoFmZ';
 
     // 3. 初始化 Supabase Client
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // 4. 定義非同步函式來獲取資料
     async function fetchTripData() {
         console.log('嘗試從 Supabase 讀取資料...');
 
-        const { data, error } = await supabase
+        const { data, error } = await supabaseClient
             .from('trips') // 選擇您建立的 trips 表格
             .select('json_data') // 只選擇儲存行程 JSON 的欄位
             .limit(1); // 因為您只插入了一筆行程資料，所以只取第一筆
