--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
 
     function saveData() {
         localStorage.setItem(STORAGE_KEY, JSON.stringify(appData));
+        const currentTripData = JSON.parse(localStorage.getItem(STORAGE_KEY));
+
+        if (currentTripData) {
+            window.saveRemoteData(currentTripData);
+        } else {
+            showToast('⚠️ 本地無資料可儲存！');
+        }
     }
 
     function getSortableTime(timeStr) {
